<resources>
    <string name="app_name">Waqt</string>
    <string name="app_name_arabic">وقت</string>
    <string name="splash_logo_desc">Waqt Splash Logo</string>
    <string name="nav_home">Home</string>
    <string name="nav_set_times">Set Times</string>
    <string name="nav_tasbeeh">Tasbeeh</string>
    <string name="nav_settings">Settings</string>
    <string name="next_prayer">Next Prayer</string>
    <string name="todays_prayers">Today\'s Prayers</string>
    <string name="asr">Asr</string>
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="set_prayer_times">Set Prayer Times</string>
    <string name="save_schedule_alarms">Save &amp; Schedule Alarms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cancel">Cancel</string>
    <string name="set_time">Set Time</string>
    <string name="alarms_scheduled">Alarms scheduled!</string>

    <string name="appearance">APPEARANCE</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notifications_caps">NOTIFICATIONS</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="granted">Granted</string>
    <string name="not_granted">Not Granted</string>
    <string name="adhan_sound">Adhan Sound</string>
    <string name="makkah_adhan">Makkah Adhan</string>
    <string name="prayer_alarms">PRAYER ALARMS</string>
    <string name="general">GENERAL</string>
    <string name="about_waqt">About Waqt</string>

    <!-- Add these to your existing strings.xml -->
    <string name="tasbeeh">Tasbeeh</string>
    <string name="subhanallah">سُبْحَانَ ٱللَّٰهِ</string>
    <string name="alhamdulillah">ٱلْحَمْدُ لِلَّٰهِ</string>
    <string name="allahuakbar">اللّٰهُ أَكْبَرُ</string>
    <string name="reset">Reset</string>
    <string name="zero">0</string>
    <string name="dhikr_format">%1$d × %2$s</string>
    <string name="dhikr_subhan_full">33 × سُبْحَانَ ٱللَّٰهِ</string>
    <string name="pill_subhan_text">33 سُبْحَانَ ٱللَّٰهِ</string>
    <string name="pill_alhamd_text">33 ٱلْحَمْدُ لِلَّٰهِ</string>
    <string name="pill_allahu_text">33 اللّٰهُ أَكْبَرُ</string>
    <string name="daily_dhikr">Daily Dhikr</string>
    <string name="close">Close</string>
</resources>