<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg">

    <!-- Top Bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/tasbeeh"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_refresh"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:contentDescription="@null"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_refresh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_theme"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/text_secondary" />

        <ImageView
            android:id="@+id/iv_theme"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:background="@drawable/bg_theme"
            android:contentDescription="@string/nav_settings"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/iv_theme_night"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/theme_icon_tint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Choice Row -->
    <LinearLayout
        android:id="@+id/ll_choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@+id/cl_top_bar">

        <TextView
            android:id="@+id/choice_subhan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_tasbeeh_chip_active"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/subhanallah"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/choice_alhamd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_tasbeeh_chip_inactive"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/alhamdulillah"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/choice_allahu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_tasbeeh_chip_inactive"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/allahuakbar"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/_11ssp" />

    </LinearLayout>

    <!-- Main Counter Circle -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_counter"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_220sdp"
        app:layout_constraintBottom_toTopOf="@+id/tv_dhikr_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_choices"
        app:layout_constraintVertical_bias="0.4">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_ring"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progress="0"
            android:clickable="false"
            android:focusable="false"
            app:indicatorColor="@color/gold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackColor="@color/divider"
            app:trackThickness="@dimen/_6sdp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tap_area"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_180sdp"
            app:cardBackgroundColor="@color/primary_green_themed"
            app:cardCornerRadius="@dimen/_90sdp"
            app:cardElevation="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppin_regular"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/_70ssp" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Dhikr Label -->
    <TextView
        android:id="@+id/tv_dhikr_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_40sdp"
        android:fontFamily="@font/poppin_regular"
        android:text="@string/dhikr_subhan_full"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toTopOf="@+id/ll_milestones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Milestone Pills -->
    <LinearLayout
        android:id="@+id/ll_milestones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_32sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_reset">

        <TextView
            android:id="@+id/pill_subhan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_tasbeeh_pill_active"
            android:fontFamily="@font/poppin_regular"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/pill_subhan_text"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/pill_alhamd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_tasbeeh_pill_inactive"
            android:fontFamily="@font/poppin_regular"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/pill_alhamd_text"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/pill_allahu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_tasbeeh_pill_inactive"
            android:fontFamily="@font/poppin_regular"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/pill_allahu_text"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

    <!-- Reset text button -->
    <TextView
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_40sdp"
        android:fontFamily="@font/poppin_regular"
        android:padding="@dimen/_8sdp"
        android:text="@string/reset"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
